<resources>
    <string name="app_name">ToDoApp</string>
    <!--    Splash Activity-->
    <string name="splash_image_desc">Splash screen image</string>
    <!--    Welcome Activity-->
    <string name="welcome_image_desc">Welcome image</string>
    <string name="welcome_title">Welcome to\n Uno To Do!</string>
    <string name="welcome_sub_title">Start using the best To Do app</string>
    <string name="welcome_get_started_btn">Get started</string>
    <!--    Start Activity-->
    <string name="start_title">Welcome to\n Uno To Do!</string>
    <string name="start_sub_title">Please login to your account or create new account to continue</string>
    <string name="start_login">Login</string>
    <string name="start_create_account">Create account</string>
    <!--    Login Activity-->
    <string name="login_title">Login</string>
    <string name="login_email_hint">Email</string>
    <string name="login_login_btn">Login</string>
    <!--    Register Activity-->
    <string name="register_title">Register</string>
    <string name="register_first_name_hint">First Name</string>
    <string name="register_last_name_hint">Last Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_register_btn">Register</string>
    <!--    Home Activity-->
    <string name="home_default_initials">CC</string>
    <string name="home_default_name">Cristhian Cruz</string>
    <string name="search_icon_desc">Search icon</string>
    <string name="star_icon_desc">Important icon</string>
    <string name="home_important_btn">Important</string>
    <string name="chevron_right_icon_desc">Enter icon</string>
    <string name="home_tasks_btn">Tasks</string>
    <string name="house_icon_desc">Tasks icon</string>
    <string name="home_new_list_btn">New List</string>
    <string name="home_task_list_title">Task List</string>
    <!--    New List dialog-->
    <string name="new_list_dialog_title">New list</string>
    <string name="new_list_dialog_hint">Enter list title</string>
    <string name="new_list_dialog_create">Create</string>
    <string name="new_list_dialog_cancel">Cancel</string>
    <!--    Task List Activity-->
    <string name="task_list_to_do_btn">To Do</string>
    <string name="task_list_completed_btn">Completed</string>
    <string name="task_list_add_task_btn">Add a task</string>
    <string name="task_list_task_completed_chk">Not completed</string>
    <string name="task_list_task_important_chk">Not important</string>
    <!--    Task List Menu-->
    <string name="menu_action_edit_title">Edit title</string>
    <string name="menu_action_delete_title">Delete Task List</string>
    <!--    Rename List Dialog-->
    <string name="rename_list_dialog_title">Rename list</string>
    <string name="rename_list_dialog_hint">Enter new title</string>
    <string name="rename_list_dialog_rename">Rename</string>
    <string name="rename_list_dialog_cancel">Cancel</string>
    <!--    Delete List Dialog-->
    <string name="delete_list_dialog_title">Are you sure?</string>
    <string name="delete_list_dialog_msg">List will be permanently deleted</string>
    <string name="delete_list_dialog_delete">Delete</string>
    <string name="delete_list_dialog_cancel">Cancel</string>
    <!--    Task Activity-->
    <string name="task_title_hint">Task name</string>
    <string name="task_calendar_icon_desc">Calendar icon</string>
    <string name="task_add_due_date_msg">Add Due Date</string>
    <string name="task_delete_due_date_desc">Delete due date</string>
    <string name="task_description_hint">Add Note</string>
    <string name="task_delete_task_desc">Delete task</string>
    <!--    Shared Preferences Keys-->
    <string name="shared_preferences_on_boarding">hasSeenOnBoarding</string>
    <string name="shared_preferences_user_id">userId</string>
</resources>