<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/register_title"
        android:textColor="?colorOnSurface"
        android:textSize="36sp"
        />

    <EditText
        android:id="@+id/et_register_first_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="16sp"
        android:textColor="?colorOnSurface"
        android:inputType="textCapSentences"
        android:hint="@string/register_first_name_hint"
        android:autofillHints=""
        />

    <EditText
        android:id="@+id/et_register_last_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="16sp"
        android:textColor="?colorOnSurface"
        android:inputType="textCapSentences"
        android:hint="@string/register_last_name_hint"
        android:autofillHints=""
        />

    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="16sp"
        android:textColor="?colorOnSurface"
        android:inputType="textEmailAddress"
        android:hint="@string/register_email_hint"
        android:autofillHints="emailAddress"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/register_register_btn"
        android:textAllCaps="false"
        android:textColor="?colorOnPrimary"
        android:background="@drawable/shape_positive_button"
        />

</LinearLayout>