<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:id="@+id/ll_home_user"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_home_user_initials"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/shape_circular_box_home"
            android:gravity="center"
            android:text="@string/home_default_initials"
            android:textColor="?colorSurface"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/tv_home_user_name"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/home_default_name"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textStyle="bold"
            />

        <ImageButton
            android:id="@+id/ib_home_search"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/search_icon_desc"
            android:src="@drawable/ic_baseline_search_24"
            app:tint="?colorPrimaryVariant"
            tools:ignore="ImageContrastCheck" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_home_important"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/star_icon_desc"
            android:src="@drawable/ic_baseline_star_24"
            app:tint="?colorError"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/home_important_btn"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textStyle="bold"
            />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_chevron_right_24"
            app:tint="?colorOnSurface"
            android:background="@android:color/transparent"
            android:contentDescription="@string/chevron_right_icon_desc"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_home_tasks"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/house_icon_desc"
            android:src="@drawable/ic_baseline_house_siding_24"
            app:tint="?colorPrimaryVariant"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/home_tasks_btn"
            android:textColor="?colorOnSurface"
            android:textSize="16sp"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_chevron_right_24"
            app:tint="?colorOnSurface"
            android:background="@android:color/transparent"
            android:contentDescription="@string/house_icon_desc"
            />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_margin="15dp"

        android:background="?colorPrimaryVariant"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="36dp"
        app:drawableStartCompat="@drawable/ic_baseline_add_24"
        android:drawablePadding="8dp"
        app:drawableTint="?colorPrimaryVariant"
        android:gravity="center_vertical"
        android:text="@string/home_new_list_btn"
        android:textColor="?colorPrimaryVariant"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>