<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="44dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="5dp"
    android:gravity="center_vertical"
    >

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/star_icon_desc"
        android:src="@drawable/ic_baseline_list_24"
        app:tint="?colorPrimaryVariant"
        tools:ignore="ImageContrastCheck"
        />

    <TextView
        android:id="@+id/tv_home_task_list_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/home_important_btn"
        android:textColor="?colorOnSurface"
        android:textSize="16sp"
        android:layout_weight="1"
        />

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_chevron_right_24"
        app:tint="?colorOnSurface"
        android:background="@android:color/transparent"
        android:contentDescription="@string/chevron_right_icon_desc"
        />

</LinearLayout>