<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="180dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/login_title"
        android:textColor="?colorOnSurface"
        android:textSize="36sp"
        />

    <EditText
        android:id="@+id/et_login_email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="69dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email_hint"
        android:textSize="16sp"
        android:textColor="?colorOnSurface"
        android:autofillHints="emailAddress"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/shape_positive_button"
        android:text="@string/login_login_btn"
        android:textAllCaps="false"
        android:textColor="?colorOnPrimary"
        tools:ignore="DuplicateSpeakableTextCheck" />

</LinearLayout>