<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_medium_dialog"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/rename_list_dialog_title"
        android:textSize="22sp"
        android:textColor="?colorOnSurface"
        />

    <EditText
        android:id="@+id/et_title_rename_list_dialog"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:padding="16dp"
        android:hint="@string/rename_list_dialog_hint"
        android:autofillHints=""
        android:inputType="text"
        android:textColor="?colorOnSurface"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        android:gravity="end"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_negative_rename_list_dialog"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/shape_negative_button"
            android:minWidth="0dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/rename_list_dialog_cancel"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_positive_rename_list_dialog"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/shape_positive_button"
            android:text="@string/rename_list_dialog_rename"
            android:textAllCaps="false"
            android:textColor="?colorOnPrimary"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>