<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_medium_dialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_list_dialog_title"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:textSize="22sp"
        android:textColor="?colorOnSurface"
        />

    <EditText
        android:id="@+id/et_new_list_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/new_list_dialog_hint"
        android:autofillHints=""
        android:inputType="text"
        android:padding="16dp"
        android:textColor="?colorOnSurface"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="end"
        >

        <Button
            android:id="@+id/btn_negative_new_list_dialog"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_negative_button"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/new_list_dialog_cancel"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btn_positive_new_list_dialog"
            android:layout_width="108dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_positive_button"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:text="@string/new_list_dialog_create"
            android:textAllCaps="false"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconPadding="-5dp"
            tools:ignore="ButtonStyle,TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>